# DS

./: .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
DjangoShop/: Dockerfile  conftest.py  entrypoint.sh
DjangoShop/DjangoShop/: asgi.py  settings.py  urls.py  wsgi.py
DjangoShop/shop/: serializers.py  urls.py
DjangoShop/shop/migrations/: 0001_initial.py  0002_alter_categoryproduct_product.py  0003_category_product_alter_foreign_keys.py  0004_alter_product_slug.py  0005_order_basket.py
DjangoShop/shop/mixins/view_mixins/: permission_mixin.py
DjangoShop/shop/models/: __init__.py  basket.py  order.py  product.py
DjangoShop/shop/serializers/: basket_serializer.py  order_serializer.py  product_serializers.py
DjangoShop/shop/tests/: test_model.py  test_serializer.py  test_viewsets.py
DjangoShop/shop/tests/test_viewset/: test_autherization_viewset.py  test_inventory_viewset.py  test_product_viewset.py
DjangoShop/shop/views/: autherization_views.py  inventory_views.py  product_views.py
ShopFrontVue/: Dockerfile  entrypoint.sh
ShopFrontVue/front/: package-lock.json  settings.json
ShopFrontVue/front/src/: App.vue
